<resources>
    <string name="app_name">My Shope</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up_hear">Sign Up Hear</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="signin_now">signin now</string>
    <string name="sign_in_hear">Sign In Hear</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="signup_now">signup now</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>