<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_signp_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".uiFragment.SignupFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingLeft="20dp"
        android:text="@string/sign_up_hear"
        android:textColor="@color/fontColor"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">

        <RelativeLayout
            android:id="@+id/rl_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_transparent_bg"
            android:gravity="center">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/fontColorDark"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/email_address"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/fontColorDark"
                android:textColorHint="@color/fontColorDark"
                android:textCursorDrawable="@null" />

            <View
                android:id="@+id/view_email"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/et_email"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/fontColorDark" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/rl_email"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_transparent_bg"
            android:gravity="center">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/ic_profile"
                android:drawablePadding="10dp"
                android:drawableTint="@color/fontColorDark"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/username"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/fontColorDark"
                android:textColorHint="@color/fontColorDark"
                android:textCursorDrawable="@null" />

            <View
                android:id="@+id/view_username"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/et_username"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/fontColorDark" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/rl_username"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_transparent_bg"
            android:gravity="center">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/fontColorDark"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/password"
                android:password="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/fontColorDark"
                android:textColorHint="@color/fontColorDark"
                android:textCursorDrawable="@null" />

            <View
                android:id="@+id/view_password"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/et_password"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/fontColorDark" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/rl_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/fontColorDark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_signup"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/already_have_a_account"
                android:textColor="@color/fontColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sigin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_bold"
                android:paddingLeft="8dp"
                android:text="@string/signin_now"
                android:textColor="@color/fontColor"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressbar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:lottie_autoPlay="true"
        android:layout_below="@id/rl_layout"
        android:layout_centerHorizontal="true"
        app:lottie_fileName="loadingAnimation.json"
        app:lottie_loop="true"
        android:visibility="gone"/>
</RelativeLayout>